# ndt_with_torch

./: README.md  create_map.py  demo_ndt.py  kitti_dataset.py  requirements.txt
configs/: config.py  default.yaml
evaluation/: benchmark.yaml  create_benchmark.py  eval.py
ndt/: __init__.py  kdtree.py  ndt.py  pcl_torch_ndt.py  se3.py  utils.py
pcl/: CMakeLists.txt  KittiOdometryDataset.cpp  KittiOdometryDataset.h
